# browser-elm-compiler

./: .gitignore  Makefile  README.md  browser-elm-compiler.cabal  package.json  stack.yaml
js/: elm-compiler-interface.js  elm-package.js  export.js  github-source.js  worker-interface.js
src/: JSInterface.hs
