name:                browser-elm-compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/browser-elm-compiler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable browser-elm-compiler-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -W
  cpp-options:         -DGHCJS_BROWSER
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       elm-compiler == 0.18,
                       elm-package == 0.18,
                       ghcjs-prim,
                       ghcjs-base,
                       containers,
                       bytestring,
                       binary,
                       aeson,
                       mtl,
                       text,
                       base64-bytestring
  other-modules:       Data.List.Utils,
                       Data.String.Utils,
                       JSInterface,
                       JSTypes,
                       Utils.Misc

source-repository head
  type:     git
  location: https://github.com/githubuser/browser-elm-compiler
